Bugfix - Homepage Header Not responsive... ish
What
=================
Login and Register buttons were getting clipped and then not included in
the mobile menu.

--- a/assets/scss/blocks/_header.scss
+++ b/assets/scss/blocks/_header.scss
@@ -26,7 +26,7 @@
 			sup {
 				font-size: 12px;
 			}
-			@include media('<768px') {
+			@include media('<991px') {
 				margin-right: auto;
 			}
 		}
@@ -37,14 +37,14 @@
 			height: 35px;
 			justify-content: center;
 			align-items: center;
-			@include media('<768px') {
+			@include media('<991px') {
 				height: 100%;
 				width: 50px;
 				margin-right: 10px;
 				position: relative;
 			}
 			&.showed {
-				@include media('<768px') {
+				@include media('<991px') {
 					position: fixed;
 					width: 100%;
 					height: 100%;
@@ -88,7 +88,7 @@
 				list-style: none;
 				width: 100%;
 				padding: 0;
-				@include media('<768px') {
+				@include media('<991px') {
 					display: none;
 				}
 				li {
@@ -107,6 +107,8 @@
 				height: 100%;
 				min-width: 140px;
 				@include font(14, 20, 400, $futura);
+				text-transform: uppercase;
+
 				@include media('<1200px') {
 					display: none;
 				}
@@ -120,7 +122,7 @@
 				}
 			}
 		}
-		@include media('<768px') {
+		@include media('<991px') {
 			.menu-icon {
 				cursor: pointer;
 				position: absolute;
@@ -149,7 +151,7 @@
 			display: flex;
 			padding-left: 15px;
 		}
-		@include media('<768px') {
+		@include media('<991px') {
 			height: 45px;
 		}
 		&.header {
@@ -167,7 +169,7 @@
 					color: black;
 					line-height: 71px;
 					align-self: flex-start;
-					@include media('<768px') {
+					@include media('<991px') {
 						font-size: 17px;
 						line-height: 45px;
 					}
@@ -198,7 +200,7 @@
 										width: 100%;
 										height: 4px;
 										background: #fe9e63;
-										@include media('<768px'){
+										@include media('<991px'){
 											top:auto;
 											bottom: -5px;
 										}
@@ -253,7 +255,7 @@
 					height: 82px;
 					line-height: 92px;
 					align-items: baseline;
-					@include media('<768px') {
+					@include media('<991px') {
 						height: 58px;
 						line-height: 65px;
 						width: 75px;
